# GoodInfo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python-ci.yml
app/: run_crawler.py
log/: 20210819_get_news_from_glink.txt  20210820_get_news_from_glink.txt
script/: get_gnews.sh  get_goodinfo.sh  get_news_from_glink.sh
src/: base_crawler.py  config.py  entry_gnews.py  entry_goodinfo.py  entry_media.py  gnews.py  gnews_query.txt  goodinfo.py  query.txt
src/crawler/: media_news_crawler_factory.py
src/crawler/goodinfo/: goodinfo.py
src/crawler/googlenews/: __init__.py  gnews.py
src/crawler/media/: appledaily.py  base.py  bcc.py  bnext.py  chinatimes.py  cmmedia.py  cna.py  cnews.py  cnyes.py  ctee.py  ctitv.py  cts.py  ctv.py  cynes.py  digitimes.py  ebc.py  epochtimes.py  era.py  ettoday.py  factory.py  ftv.py  kairos.py  ltn.py  mirror.py  moneydj.py  moneyudn.py  mypeoplevol.py  newtalk.py  nownews.py  pchome.py  peoplenews.py  pts.py  rti.py  (+16 more)
src/media/: entry.py
src/utils/: struct.py  utility.py
tests/test_crawler_media/: test_bnext.py  test_chinatimes.py  test_cmmedia.py  test_cna.py  test_ctee.py  test_ctitv.py  test_cts.py  test_cynes.py  test_epochtimes.py  test_era.py  test_ettoday.py  test_kairos.py  test_moneyudn.py  test_pts.py  test_setn.py  test_sina.py  test_storm.py  test_taronews.py  test_technews.py  test_thenewslens.py  test_ttv.py  test_tvbs.py  test_upmedia.py  test_wealth.py  test_yahoo.py
tests/test_media/: test_yahoo.py
(+64 files in other folders)
