[tool.poetry]
name = "GoodInfo"
version = "0.1.0"
description = "Web crawler for Taiwan GoodInfo (stock information)"
authors = ["Yu-Lun Chiang <chiangyulun0914@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3.0"
tqdm = "4.61.2"
beautifulsoup4 = "4.9.3"
lxml = "4.6.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
pre-commit = "^2.13"
flake8 = "3.9.2"
black = "21.6b0"
isort = "5.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
